@@ -98,6 +98,12 @@ PROTECTED font new_font_object(HFONT hf)
 	return (font) obj;
 }
 
+rect getSysFontSize()
+{
+    return  SystemFont->rect;
+}
+
+
 /*
  *  Private font initialisation function.
  */
